<resources>
    <string name="app_name">RxJava2Demo</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_net_drawable">NetDrawableActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_button">ButtonActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="ScrollAwareFABBehaviorDefault" translatable="false">reactnative.ng.smc.rxjava2demo.material_design.ScrollAwareFABBehaviorDefault</string>

    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
    <string name="threedworld">三维世界（3D world）
        Material 环境是一个三维的空间，这意味着每个对象都有 x ， y ， z 三维坐标属性，z 轴垂直于显示平面，并延伸向用户视角,每个 material 元素在 z 轴上占据一定的位置并且有一个 1dp 厚度的标准。 在网页上，z 轴被用来分层而不是为了视角。3D 空间通过操纵 y 轴进行仿真。</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Lorem ipsum dolor sit amet, sed massa wisi, id nisl, sed vitae nec.
    Id wisi, sodales interdum auctor. Vestibulum sed.</string>
    <string name="lorem_ipsum_long">
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sed magna et dolor luctus mollis.
    Sed suscipit quam enim, in iaculis turpis finibus quis. Morbi fermentum ante quis magna tempus
    suscipit. Sed rhoncus sed felis non elementum. Morbi porttitor molestie mauris, eget maximus
    ante sagittis eget. Donec id congue mauris, quis pulvinar erat. Sed cursus est eu erat malesuada
    vehicula. Fusce est dui, tempus a leo a, finibus accumsan tellus. Duis vitae sem ullamcorper,
    hendrerit odio ac, vestibulum orci. Nunc et dui nec ligula semper congue eget in sapien.
    Vestibulum consectetur vel lacus sed hendrerit. Interdum et malesuada fames ac ante ipsum
    primis in faucibus. In justo mi, mollis eu leo non, malesuada consequat nisi. Vestibulum
    euismod mauris dui, in volutpat est placerat et. In hac habitasse platea dictumst.  Cras vitae
    suscipit quam. Ut orci enim, laoreet non mi in, convallis pretium quam. Donec lobortis nisi ut
    malesuada auctor. Aenean vel porttitor velit. Cras tincidunt, purus ut volutpat mattis, magna
    lectus sodales arcu, eget pretium nisi ex et nisi. Vivamus vel euismod nulla. Vivamus eget
    metus sit amet lacus tempor faucibus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
    Fusce sed magna et dolor luctus mollis. Sed suscipit quam enim, in iaculis turpis finibus quis.
    Morbi fermentum ante quis magna tempus suscipit. Sed rhoncus sed felis non elementum. Morbi
    porttitor molestie mauris, eget maximus ante sagittis eget. Donec id congue mauris, quis
    pulvinar erat. Sed cursus est eu erat malesuada vehicula. Fusce est dui, tempus a leo a,
    finibus accumsan tellus. Duis vitae sem ullamcorper, hendrerit odio ac, vestibulum orci.
    Nunc et dui nec ligula semper congue eget in sapien. Vestibulum consectetur vel lacus sed
    hendrerit. Interdum et malesuada fames ac ante ipsum primis in faucibus. In justo mi, mollis
    eu leo non, malesuada consequat nisi. Vestibulum euismod mauris dui, in volutpat est placerat
    et. In hac habitasse platea dictumst.  Cras vitae suscipit quam. Ut orci enim, laoreet non mi
    in, convallis pretium quam. Donec lobortis nisi ut malesuada auctor. Aenean vel porttitor velit.
    Cras tincidunt, purus ut volutpat mattis, magna lectus sodales arcu, eget pretium nisi ex et nisi.
    Vivamus vel euismod nulla. Vivamus eget metus sit amet lacus tempor faucibus.
  </string>


    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="purple">Purple</string>
    <string name="green">Green</string>
    <string name="white">White</string>
    <string name="hello_world">Hello, world!</string>
    <string name="text_input_layout">Text Input Layout</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, sed massa wisi, id nisl, sed vitae nec.
    Id wisi, sodales interdum auctor. Vestibulum sed.</string>

    <string name="dark_theme">Dark theme</string>
    <string name="info">Info</string>
    <string name="other">Other</string>
    <string name="main">Main</string>
    <string name="black">Black</string>
    <string name="drawer_layout">Drawer Layout</string>
    <string name="collapsing_toolbar_layout">Collapsing App Bar</string>
    <string name="bottom_tabs">Bottom Tabs</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
    <string name="six">Six</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="disabled_button">Disabled Button</string>
    <string name="search">Search</string>
    <string name="search_view_example">Search view example…</string>
    <string name="recycler_view">Recycler View</string>
    <string name="show_materialdialog">Show MaterialDialog</string>
    <string name="title_activity_palette">PaletteActivity</string>

</resources>
