<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="reactnative.ng.smc.rxjava2demo.material_design.HotFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/content_inset">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/content_inset">

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dark_theme"/>

            <Button
                android:id="@+id/btn_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_inset_quarter"
                android:text="@string/black"/>

            <Button
                android:id="@+id/btn_red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_inset_quarter"
                android:text="@string/red"/>

            <Button
                android:id="@+id/btn_purple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_inset_quarter"
                android:text="@string/purple"/>

            <Button
                android:id="@+id/btn_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_inset_quarter"
                android:background="@color/ate_bottom_nav_default_dark_bg"
                android:text="@string/blue"/>

            <Button
                android:id="@+id/btn_green"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_inset_quarter"
                android:text="@string/green"/>

            <Button
                android:id="@+id/btn_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_inset_quarter"
                android:text="@string/white"/>

            <TextView
                android:id="@+id/title_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_inset"
                android:text="@string/hello_world"
                android:textColor="?colorAccent"
                android:textSize="@dimen/text_size_title"/>

            <TextView
                android:id="@+id/body_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum"
                android:textSize="@dimen/text_size_body"/>


            <SeekBar
                android:id="@+id/seeker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:layout_marginTop="@dimen/content_inset"
                android:max="100"
                android:progress="50"/>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_inset"/>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/content_inset"/>

            <Button
                android:id="@+id/btn_disabled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_inset"
                android:enabled="false"
                android:text="@string/disabled_button"/>

            <Button
                android:id="@+id/btn_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_inset"
                android:text="@string/show_materialdialog"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_inset"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/content_inset">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hello_world"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="@dimen/text_size_title"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lorem_ipsum"
                        android:textColor="?android:textColorSecondary"
                        android:textSize="@dimen/text_size_body"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
